# concepts-playground

./: .gitignore  CMakeLists.txt  LICENSE-MIT  README.md
animal/: Animal.hh  CMakeLists.txt  test_animal.cpp
iterator/: CMakeLists.txt  Iterator.hh  StringIter.cpp  StringIter.hh  test_iterator.cpp  test_stringiter.cpp
